syntax = "proto3";
option optimize_for = SPEED;

message DHTMsg {
	enum Type {
		HEARTBEAT = 0;
		JOIN = 1;
		DUMP = 2;
	}

	Type type = 1;
	HeartbeatMsg heartbeat_msg = 2;
	JoinMsg join_msg = 3;
	DumpMsg dump_msg = 4;
}

message HeartbeatMsg {
}

message JoinMsg {
	string dht_address = 1;
	string application_address = 2;
	repeated int64 tokens = 3;
}

message DumpMsg {
	string dht_address = 1;
	repeated int64 tokens = 2;
	map<int64,string> lookup_table = 3;
}

message CoterieMsg {
	enum Type {
		OPEN_WRITE_STREAM = 0;
	}

	Type type = 1;
}

message OpenWriteStreamMsg {
}
